--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+   <group android:checkableBehavior="single">
+       <item
+           android:id="@+id/item1"
+           android:title="Item" />
+       <item
+           android:id="@+id/item2"
+           android:title="Item" />
+       <item
+           android:id="@+id/item3"
+           android:title="Item" />
+       <item
+           android:id="@+id/item4"
+           android:title="Item" />
+   </group>
 
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item android:title="Item" />
 </menu>
